Fix z-index

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 #index-home{
+    z-index: 1;
     background-image: url(https://images.unsplash.com/photo-1454496522488-7a8e488e8606?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2076&q=80);
     position: relative;
     background-size: cover;
@@ -11,10 +12,11 @@
 }
 
 #index-home .home-text{
+    z-index: 2;
     border-radius: 20px;
     padding: 30px;
     text-align: center;
-    background-color: rgba(100, 100, 100, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     backdrop-filter: blur(20px);
 }
 
@@ -56,6 +58,7 @@
 
 
 #banner-behance{
+    z-index: -2;
     position: absolute;
     top:0;
     width: 100vw;
@@ -68,6 +71,7 @@
 }
 
 #banner-artstation{
+    z-index: -2;
     position: absolute;
     top:0;
     width: 100vw;
