--- a/css/utilities.css
+++ b/css/utilities.css
@@ -5,6 +5,7 @@
 }
 
 body{
+    z-index: 0;
     margin:0;
     padding:0;
     overflow-x: hidden;
